# mcp-hdfs-control

./: .dockerignore  .env.example  .gitignore  README.md  audit.log.jsonl  mcp_server_bootstrap.py  pyproject.toml
docker/: docker-compose.yml
scripts/: bench_many_files.ps1  seed_hdfs.ps1
src/agent/: cli.py  llm.py  mcp_client.py  prompts.py  reporting.py
src/config/: __init__.py  agent_settings.py  mcp_settings.py
src/mcp_hdfs/: __init__.py  audit.py  constants.py  hdfs_exec.py  models.py  parsers.py  server.py
