[project]
name = "mcp-project"
version = "0.1.0"
description = "MCP server dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
    "mcp-server",
]
